--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,16 +31,15 @@ dependencies:
     sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  audiotagger: ^2.2.1
-  carousel_slider: ^4.0.0
   cupertino_icons: ^1.0.2
+  path_provider: ^2.0.4
+  ocarina: ^0.1.2
+  carousel_slider: ^4.0.0
+  permission_handler: ^8.1.6
+  audiotagger: ^2.2.1
   flutter_slidable: ^0.6.0
   marquee: ^2.2.0
-  ocarina: ^0.1.2
-  path_provider: ^2.0.4
-  permission_handler: ^8.1.6
   youtube_player_flutter: ^8.0.0
-
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +51,16 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  flutter_launcher_icons: ^0.9.2
+  flutter_native_splash: ^1.2.4
+  
+flutter_native_splash:
+  color: '#333333'
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/1024.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -67,7 +75,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/config.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
