--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   path_provider: ^2.0.4
   permission_handler: ^8.1.6
   youtube_player_flutter: ^8.0.0
+  flutter_colorpicker: ^0.6.0
 
 
 dev_dependencies:
