--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
    <application
-        android:label="Music Player"
+        android:label="Der nicht so krasse aber bessere Music Player"
         android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/launcher_icon"
         android:name="androidx.multidex.MultiDexApplication" >
