--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_slidable: ^0.6.0
   marquee: ^2.2.0
   youtube_player_flutter: ^8.0.0
+  flutter_colorpicker: ^0.6.0
+
 
 dev_dependencies:
   flutter_test:
